--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -2,7 +2,11 @@
 
 
 
- @media(max-width: 940px) {
+
+
+ @media(max-width: 640px) {
+
+  
 
   .menu-links li a {
 
@@ -20,8 +24,8 @@
   body {
     
     min-width: 100vw;
-  
-    
+    overflow-x: hidden;
+   
   }
 
  
@@ -30,7 +34,7 @@
 
     display:flex;
     justify-content: start;
-    height: 90px;
+    height: 110px;
 
   }
 
@@ -43,8 +47,11 @@
 
   .menu {
 
-
+    display:flex;
+    justify-content: end;
+    align-items: center;
     width:100%;
+    height: 100px;
     
     }
 
@@ -90,11 +97,14 @@
     }
     .info-container  {
 
-      width: 100%;
-      padding:1.5rem 0 1.5rem 0;
+      padding:0 1rem 0 1rem;
       min-height: 120vh;
       
+    }
 
+    .info-container h1 {
+
+      font-size:2rem;
     }
 
     .info-container .info-section {
@@ -110,17 +120,26 @@
 
     }
 
-    .info-section .info-column {
-     
-      min-width: 85%;
-      min-height: 380px;
-      
-    }
    
+    .services-container {
+
+      padding:2rem 0 2rem 0;
+      
+
+    }
+
+    .services-content .services-columns  {
+
+      display:grid;
+      grid-template-columns: 1fr;
+      padding:0 1rem 0 1rem;
+
+    }
+
     .services-container h1 {
 
       
-      align-self: center;
+      font-size:2.5rem;
       padding:2rem 0 2rem 0;
       
 
@@ -162,7 +181,10 @@
       
     }
     
+.intro-container {
 
+  padding: 0 1rem 0 1rem;
+}
   
  
 .intro-container .statistics-border {
@@ -179,24 +201,10 @@
 
     }
 
-
-    .intro-container .checks {
-
-
-      display:flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: start;
-      
-    }
-
    
-    .check-icons {
+    .check-icons i {
 
-      display:flex;
-      flex-direction: column;
-      gap:1rem;
-      
+      font-size: 20px;
     }
 
     .intro-container .facts-container {
@@ -204,7 +212,7 @@
 
       display:flex;
       justify-content: center;
-      align-items: start;
+      align-items: center;
       
     }
 
@@ -228,7 +236,7 @@
 
     .intro-content p {
 
-      font-size: 1.5rem;
+      font-size: 1.4rem;
      
       
   }
@@ -236,7 +244,7 @@
   .intro-content h1 {
 
 
-    font-size:4rem;
+    font-size:3rem;
   }
 
 
@@ -287,16 +295,6 @@
 
  
 
-  .info-container {
-
-    width: 100%;
-    padding:1.5rem 0 1.5rem 0;
-    
-
-  }
-
- 
-
   .info-section {
 
     display:flex;
@@ -316,23 +314,27 @@
     
   }
  
-  
+  .main-header {
+
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    place-content: center center;
+    
+  }
+
+
 .main-header p {
 
-  font-size:2.2rem;
+  font-size: 1.7rem;
+
 }
 
 .main-header h1 {
 
-  font-size:2.7rem;
+  font-size:2.5rem;
   
 }
 
-.services-container h1 {
-
-font-size:2.7rem;
-
-}
 
 .intro-container .statistics-border {
 
@@ -348,33 +350,48 @@ align-self: center;
 
   }
 
+  .intro-container .check-icons i {
+
+    font-size:1.8rem;
+  }
 
   .intro-container .checks {
 
 
     display:flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: start;
     
   }
 
+
+
+.intro-container .checks li {
+
+  font-size: 1.4rem;
+  padding:.5rem;
+}
 
 
   .check-icons {
 
     display:flex;
     flex-direction: column;
-    gap:1rem;
+    justify-content: start;
+    align-items: end;
+    gap:4rem;
+    padding-bottom:2rem;
+    
     
   }
 
   .intro-container .facts-container {
 
 
-    display:flex;
-    justify-content: center;
-    align-items: start;
+    display:grid;
+   grid-template-columns: 1fr 1fr 1fr;
+    place-content: center center;
     
   }
 
@@ -396,20 +413,49 @@ align-self: center;
     .message-and-call-btns {
 
       display:flex;
-      gap:1rem;
       flex-direction: column;
       justify-content: center;
       align-items: start;
+  }
+
+  .message-and-call-btns #hero-btn-2,#hero-btn  {
+
+    font-size:1.3rem;
+    padding:0.8rem;
+    border-radius: 0 10px 10px 0;
+    
+}
+
+.message-and-call-btns #hero-btn-2 {
+
+
+  animation-name:ringing;
+  animation-duration: 1s;
+  animation-iteration-count: 20;
+  
+}
+
+@keyframes ringing {
+  
+  from {
+
+      border-top:  4px solid #3860e4;
+      border-right:  4px solid #3860e4;
+      border-bottom:  4px solid #3860e4;
      
   }
 
-  .message-and-call-btns #hero-btn-2  {
+  to {
 
-    
-    font-size:1.3rem;
-    padding:1rem;
-    
+      border-top:  4px solid #ffa42d;
+      border-right:  4px solid #ffa42d;
+      border-bottom:  4px solid #ffa42d;
+      
+  }
 }
+
+
+
 
 .form-wrapper .form-info h1 {
 
@@ -480,6 +526,11 @@ font-size: 1.6rem;
   @media screen and (max-width: 550px) {
     .carousel img{
       width: 100%;
+    }
+
+    .carousel {
+
+      width: 80vw;
     }
   }
 
