--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ z-index: 1;
 
 header .logo h1 {
 
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding-left:1rem;
     color:#3860e4;
     animation-name: topToBottom;
@@ -204,19 +204,20 @@ button.active {
 }
 
 .menu {
-   min-width: 100%;
+   min-width: 50%;
     top:0%;
     position: absolute;
-    background-color:white;
-    transition: all 500ms;
+    background-color:#ffa42d;
+    transition: all 300ms;
     overflow: hidden;
     
 }
 
 .menu.active {
 
-    top:15%;
-   
+    top:14%;
+    background-color: #F0F0F0;
+    border-radius: 5px;
     
 }
 
@@ -232,8 +233,8 @@ text-align: center;
 
 .menu ul li {
 
-margin: 0 5px 0 5px;
-    
+margin: 0 4px 0 4px;
+
 }
 
 
@@ -332,7 +333,6 @@ display:flex;
 flex-direction: column;
 justify-content: center;
 align-items:start;
-padding-left:2rem;
 gap:1.5rem;
 
 }
@@ -531,11 +531,12 @@ margin-bottom:1rem;
     
 }
 
-.checks li {
+.intro-content .checks li {
 
     line-height: 25px;
     color:rgb(255, 255, 255);
     text-align: center;
+    font-size:1.2rem;
 }
 
 .check-icons {
@@ -1211,7 +1212,7 @@ footer .all-rights-reserved a {
 
 .menu .X-icon i {
 
-font-size: 22px;
+font-size: 23px;
 cursor: pointer;
 color:#ffa42d;
 
@@ -1363,14 +1364,14 @@ color:#3860e4;
     
     from {
 
-        transform:scale(0.9);
+        border: 4px solid #3860e4;
        
     }
 
     to {
 
-        transform: scale(1);
-        border:4px solid #ffa42d;
+        border: 4px solid #ffa42d;
+        
     }
 }
 
