--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 
 
 @font-face {
-    font-family:Comforta ;
-    src: url(/assets/font/static/Comfortaa-Bold.ttf);
+    font-family:Comforta;
+    src: url(assets/font/static/Comfortaa-Bold.ttf) format("truetype");
+    src: local("Comforta"), url("./assets/font/static/Comfortaa-Bold.ttf") format("truetype");
 }
 
 
-/* Colors */
+
+
 
 header {
 
@@ -107,7 +109,7 @@ border:2px solid #3860e4;
     border-radius: 1rem;
     margin-top:2rem;
     padding:10px;
-    background: #3860e4;  /* fallback for old browsers */
+    background: #3860e4;  
 
 }
 
