--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -44,10 +44,10 @@
   .menu {
 
     display:flex;
-    justify-content: end;
-    align-items: center;
+    justify-content: center;
+    align-items: start;
     width:100%;
-    height: 100px;
+    height: 0px;
     
     }
 
@@ -84,13 +84,7 @@
       transition: ease-in 200ms;
     }
    
-    .menu .X-icon:active {
-
-      transform: scale(0.8);
-      transition: ease 100ms;
-      background-color: #3860e4;
-
-    }
+   
     .info-container  {
 
       padding:0 1rem 0 1rem;
@@ -357,13 +351,15 @@ align-self: center;
 
 .main-header p {
 
-  font-size: 1.7rem;
+  font-size: 2rem;
 
 }
 
 .main-header h1 {
 
-  font-size:2rem;
+  
+  font-size: 3rem;
+
   
 }
 
@@ -410,13 +406,24 @@ align-self: center;
   
 }
 
+.message-and-call-btns #hero-btn-2,#hero-btn  {
+
+  font-size:1.5rem;
+  padding:0.8rem;
+  border-radius: 10px;
+  
+}
+
+
+
+
     }
 
 
 
    @media(max-width:960px) {
 
-  
+   
 
     .form-wrapper {
     
@@ -473,6 +480,8 @@ font-size: 1.4rem;
   display: none;
 }
 
+
+
    }
 
 
@@ -498,7 +507,7 @@ font-size: 1.4rem;
 
   .message-and-call-btns #hero-btn-2,#hero-btn  {
 
-    font-size:1.3rem;
+    font-size:1rem;
     padding:0.8rem;
     border-radius: 0 10px 10px 0;
     
@@ -563,6 +572,20 @@ color: rgb(44, 44, 44);
 }
 
 
+.main-header h1 {
+
+  
+  font-size: 3rem;
+
+  
+}
+
+.main-wrapper {
+
+  padding:0;
+}
+
+
 }
 
 
@@ -586,4 +609,46 @@ color: rgb(44, 44, 44);
   }
 
 
+  @media screen and (max-width:600px) {
+
+
+    .main-header h1 {
+
+
+      font-size:2rem;
+    }
+
+    .main-wrapper {
+
+      padding:0;
+    }
+  }
  
+
+  @media screen and (max-width: 350px) {
+
+    .main-wrapper {
+
+      padding:0;
+    }
+
+    .main-header h1 {
+
+      font-size: 1.5rem;
+    }
+
+    .main-header p {
+
+
+      font-size: 1.3rem;
+
+    }
+
+    .message-and-call-btns button {
+      
+      font-size: 1.2rem;
+      
+     
+    }
+
+  }
